--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.5",
     "massive": "^5.7.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
