--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
     "massive": "^5.7.5",
+    "node-sass": "^4.11.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
@@ -19,7 +20,8 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "sweetalert2": "^8.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
