--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "cron": "^1.6.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-socket.io-session": "^1.3.5",
     "massive": "^5.7.5",
     "react": "^16.8.1",
+    "react-countdown-clock": "^2.5.0",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
