--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^2.4.1",
     "react-spring": "^8.0.7",
     "redux": "^4.0.1",
     "socket.io": "^2.2.0",
