--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
     "react-countdown-clock": "^2.5.0",
+    "react-countdown-now": "^2.1.0",
     "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
